# Microbit-devices-commands

./: DETAILS.TXT  V1 Interpreter.hex  V1 Interpreter.ts  V2 Interpreter.ts  firmware.hex  interpreter.hex  microbit-controller.py  microbit-interpreter.hex  microbit-interpreterV1.hex  microbit-interpreterV2.hex  microbit_V2026.01.0.ts  microbit_V2026.01.1.ts  microbit_firmware.py  microbit_firmware.ts  pyproject.toml  script1.py  update_checker.py
.github/workflows/: microbit-live.yml
Microbit Interpreters/: V1 Interpreter.ts  V2 Interpreter.hex
src/Microbit Live/: microbit-controller.py
src/microbit_live/: __init__.py
